[package]
name = "dst-update-publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
rss = "2"
scraper = "0.25"
zip = "2"
polib = "0.3"
redis = { version = "0.27", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
async-openai = "0.29"
chrono = "0.4"
url = "2"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
html2text = "0.13"